--- a/src/css/Review.css
+++ b/src/css/Review.css
@@ -1,8 +1,16 @@
 .page {
-  height: 560px;
+  height: 640px;
 }
 
 .cardWidth {
   width: 30rem;
   height: 20rem;
+}
+
+.image {
+  height: auto;
+  width: 100%;
+  position: relative;
+
+  background-image: url("../img/the-climate.jpg")
 }
