--- a/src/css/ViewQuestion.css
+++ b/src/css/ViewQuestion.css
@@ -1,18 +1,30 @@
 .mainBody {
-    height:640px;
-     margin-top:0px;
-  }
-.width{
-    width: 18rem
-  }
-
-.image{
-  background-image: url("../img/the-climate.jpg");
-  height:auto;
-  width:100%;
-  position:relative
+  height: 640px;
+  margin-top: 0px;
+}
+.width {
+  width: 18rem;
 }
 
-cardBg{
-  opacity:70%
+/* .image {
+  background-image: url("../img/the-climate.jpg");
+  height: 100%;
+  width: 100%;
+  position: relative;
+  object-fit: cover;
+  overflow: hidden;
+} */
+
+.viewquestionimage {
+  background-image: url("../img/the-climate.jpg");
+  background-size: cover;
+  max-width: 100%;
+  height: auto;
+  transform: (translate(-50%, -50%));
+  left: 50%;
+  top: 50%;
+}
+
+cardBg {
+  opacity: 70%;
 }
