--- a/src/css/ViewQuestions.css
+++ b/src/css/ViewQuestions.css
@@ -1,3 +1,9 @@
-.mainBody {
-  margin-top: 70px;
+.questionsmainBody {
+  padding-top:70px;
+  height:640px
+}
+
+.viewquestionsimage{
+  background-image: url("../img/max-delsidh.jpg");
+  background-size: cover;
 }
