--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -1,7 +1,7 @@
 .menuscreen {
   height: 640px;
   padding-top: 70px;
-  opacity: 100%;
+
 }
 
 .addIcon {
@@ -16,3 +16,6 @@
 .content {
   position: absolute;
 }
+
+
+/* opacity: 100%; */
